# envguard

./: .gitignore  CONTRIBUTING.md  README.md  README.zh-CN.md  README.zh-TW.md  pyproject.toml
.github/workflows/: python-app.yml
src/envguard/: __init__.py  audit_engine.py  cli.py  engine.py  find_engine.py  hook.py  logger.py  main.py  resolver.py
src/envguard/data/: rules.json
src/envguard/probes/: audit.py
src/envguard/shell/: envguard.bash  envguard.plugin.zsh
src/envguard/utils/: colors.py
tests/: __init__.py  test_audit.py  test_cli.py  test_colors.py  test_config.py  test_engine.py  test_find.py  test_hook.py  test_logger.py  test_main.py  test_phase2_engine.py  test_phase2_hook.py  test_resolver.py  test_shell.py  test_shell_hooks.py
